# NeuralNetwork

./: .gitmodules  CMakeLists.txt
NeuralNetwork/: CMakeLists.txt  main.cpp
NeuralNetwork/Source/: NeuralNetwork.cpp
